Fixed first heading on mobile

--- a/styles/override.styl
+++ b/styles/override.styl
@@ -217,6 +217,18 @@ ul.code-language-switcher {
         width: "calc(100% - %s)" % ($sidebarWidth * 0.82);
       }
 
+      .content {
+        & > *:first-child {
+          margin-top: $navbarHeight * 2;
+        }
+
+        & > h1, & > h2, & > h3, & > h4, & > h5, & > h6 {
+          &:first-child {
+            padding-top: 0;
+          }
+        }
+      }
+
       pre, pre[class*="language-"] {
         margin: 1em 0;
         border-radius: 6px;
@@ -225,10 +237,6 @@ ul.code-language-switcher {
       h1, h2, h3, h4, h5, h6 {
         margin-top: (0.5rem - $navbarHeight - $navbarHeight);
         padding-top: ($navbarHeight + $navbarHeight + 1rem);
-        &:first-child {
-          margin-top: (0.5rem - $navbarHeight);
-          padding-top: ($navbarHeight + 1rem);
-        }
       }
     }
   }
